# tic-tac

./: .env  .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  settings.py  tasks.md  tic.py
src/crons/: archive_finished_games.py  delete_finished_games_from_redis.py
src/logic/: authentication.py  board.py  checker.py  events.py  exceptions.py  game.py  interfaces.py  main.py  player.py  repository.py  schemas.py
src/logic/auth/: authentication.py  schemas.py  utils.py
src/logic/consumers/: connection_manager.py  state_machine.py
src/logic/entities/: base_schemas.py  events.py  messages.py  notifications.py  responses.py
src/logic/enums/: client_event_types.py  event_type.py  message_statuses.py  notification_type.py  (+1 more)
src/mappers/: dt.py  event_mappers.py  game_mapper.py  message_mapper.py  publish_mapper.py  response_mappers.py
src/repo/: drop_schema.sql  postgres.py  repository_common.py  repository_game.py  repository_game_pg.py  repository_user.py  schema.sql
src/services/: connection_manager.py  delete_player_from_waiting_list.py  messages_handlers.py  pubsub.py  state_machine.py  ws_handlers.py
src/tests/: conftest.py
src/utils/: error_handler.py
tests/: conftest.py
tests/functional_tests/: conftest.py  test_auth.py  test_auth_routers.py  test_crons.py  test_game_routers.py  test_game_websockets.py
tests/unit_tests/: conftest.py  test_auth.py  test_board_and_checkers.py  test_convert_dataclass_to_dict.py  test_game.py  test_main.py  test_mappers.py  test_state_machine.py
(+22 files in other folders)
