[tool.poetry]
name = "tic-tac"
version = "0.1.0"
description = ""
authors = ["p_kozhevnikov <p.kozhevnikov@cian.ru>"]
readme = "README.md"
packages = [{include = "tic_tac"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-mock = "^3.12.0"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.1.2"
fastapi = "^0.106.0"
uvicorn = "^0.25.0"
httpx = "^0.26.0"
passlib = "^1.7.4"
orjson = "^3.9.10"
python-tools = {git = "https://github.com/pashkan111/python-tools"}
websockets = "^12.0"
requests = "^2.31.0"
async-asgi-testclient = "^1.4.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
